# viri

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  shell.nix
src/: child.rs  config.rs  cursor.rs  lib.rs  main.rs  output.rs  state.rs
